--- a/mujer.html
+++ b/mujer.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
@@ -18,15 +20,21 @@
             </ul>   
         </nav>
     </header>
+    <section class="imagenes-mujer">
+        <div class="d-flex justify-content-around d-flex flex-wrap">
+        <div class="card" style="width: 18rem;">
+            <img src="images/mujer/conjunto.png" class="card-img-top" alt="">
+        </div>
 
-    <section class="images-mujer">
-        <img class="fotos-mujer primera-foto" src="images/mujer/conjunto.png" alt="">
-        <img class="fotos-mujer" src="images/mujer/falda.png" alt="">
-        <img class="fotos-mujer" src="images/mujer/top.png" alt="">
-        <img class="fotos-mujer" src="images/mujer/vestido.png" alt="">
-        <img class="fotos-mujer" src="images/mujer/zapatilla.png" alt="">
+        <div class="card" style="width: 18rem;">
+            <img src="images/mujer/falda.png" class="card-img-top" alt="">
+        </div>
+
+        <div class="card" style="width: 18rem;">
+            <img src="images/mujer/vestido.png" class="card-img-top" alt="">
+        </div>
+        </div>
     </section>
-
 
 
     <footer>
@@ -41,5 +49,8 @@
         </a>
         <p class="parrafo-footer">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </body>
 </html>
