agregando SEO a el proyecto

--- a/index.html
+++ b/index.html
@@ -4,25 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Escoge una mejor manera de vivir con la mejor ropa.">
+    <meta name="keywords" content="Moda, Ropa, Estilo, Colecciones, Pasarela, Estilo Unico">
+
     <link rel="stylesheet" href="css/style.css">
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>Document</title>
+    <title>Mundo Moda | Que el estilo te eliga</title>
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <a href="index.html"><img class="logo" src="images/mandala.png" alt="logo"></a>
-                <a class="barra" href="hombre.html">Hombre</a>
-                <a class="barra" href="mujer.html">Mujer</a>
+                <a href="index.html"><img class="logo" src="images/mandala.png" alt="Marca de la coleccion"></a>
+                <a class="barra" href="hombre.html">Sección Hombres</a>
+                <a class="barra" href="mujer.html">Sección Mujeres</a>
                 <a class="barra nosotros" href="nosotros.html">Nosotros</a>
             </ul>   
         </nav>
     </header>
     <section>
-        <h1>Nueva colección</h1>
+        <h1>Nueva colección | Vive el 2022</h1>
         <div>
             <img class="coleccion" src="images/coleccion.png" alt="Nueva-coleccion">
         </div>
