--- a/mujer.html
+++ b/mujer.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Escoge una mejor manera de vivir con la mejor ropa.">
+    <meta name="keywords" content="Moda, Ropa, Estilo, Colecciones, Pasarela, Estilo Unico">
+
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Avance de temporada | Todo lo que la mujer necesita</title>
 </head>
 <body>
     <header>
