--- a/nosotros.html
+++ b/nosotros.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Escoge una mejor manera de vivir con la mejor ropa.">
+    <meta name="keywords" content="Moda, Ropa, Estilo, Colecciones, Pasarela, Estilo Unico">
+
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Conocenos | Nosotros te ayudamos en lo que necesites</title>
 </head>
 <body>
     <header>
