--- a/hombre.html
+++ b/hombre.html
@@ -18,28 +18,28 @@
         <nav>
             <ul>
                 <a href="index.html"><img class="logo" src="images/mandala.png" alt="logo"></a>
-                <a class="barra" href="hombre.html">Hombre</a>
-                <a class="barra" href="mujer.html">Mujer</a>
+                <a class="barra" href="hombre.html">Sección Hombres</a>
+                <a class="barra" href="mujer.html">Sección Mujeres</a>
                 <a class="barra nosotros" href="nosotros.html">Nosotros</a>
             </ul>   
         </nav>
     </header>
     <div class="d-flex justify-content-around d-flex flex-wrap">
         <div class="card" style="width: 18rem;">
-            <img src="images/casaca.png" class="card-img-top-hombre" alt="casaca">
+            <img src="images/casaca.png" class="card-img-top" alt="casaca">
             <div class="card-body">
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
         
         </div>
         <div class="card" style="width: 18rem;">
-            <img src="images/pantalon.png" class="card-img-top-hombre" alt="casaca">
+            <img src="images/pantalon.png" class="card-img-top" alt="casaca">
             <div class="card-body">
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
         </div> 
         <div class="card" style="width: 18rem;">
-            <img src="images/zapato.png" class="card-img-top-hombre" alt="casaca">
+            <img src="images/zapato.png" class="card-img-top" alt="casaca">
             <div class="card-body">
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
