--- a/mujer.html
+++ b/mujer.html
@@ -17,8 +17,8 @@
         <nav>
             <ul>
                 <a href="index.html"><img class="logo" src="images/mandala.png" alt="logo"></a>
-                <a class="barra" href="hombre.html">Hombre</a>
-                <a class="barra" href="mujer.html">Mujer</a>
+                <a class="barra" href="hombre.html">Sección Hombres</a>
+                <a class="barra" href="mujer.html">Sección Mujeres</a>
                 <a class="barra nosotros" href="nosotros.html">Nosotros</a>
             </ul>   
         </nav>
@@ -26,15 +26,15 @@
     <section class="imagenes-mujer">
         <div class="d-flex justify-content-around d-flex flex-wrap">
         <div class="card" style="width: 18rem;">
-            <img src="images/mujer/conjunto.png" class="card-img-top" alt="">
+            <img src="images/mujer/conjunto.png" class="card-img-top-mujer" alt="">
         </div>
 
         <div class="card" style="width: 18rem;">
-            <img src="images/mujer/falda.png" class="card-img-top" alt="">
+            <img src="images/mujer/falda.png" class="card-img-top-mujer" alt="">
         </div>
 
         <div class="card" style="width: 18rem;">
-            <img src="images/mujer/vestido.png" class="card-img-top" alt="">
+            <img src="images/mujer/vestido.png" class="card-img-top-mujer" alt="">
         </div>
         </div>
     </section>
