--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Etiquetas meta-->
     <meta name="description" content="Escoge una mejor manera de vivir con la mejor ropa.">
     <meta name="keywords" content="Moda, Ropa, Estilo, Colecciones, Pasarela, Estilo Unico">
-
+    <!--link css-->
     <link rel="stylesheet" href="css/style.css">
-    
+    <!--link framework-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <title>Mundo Moda | Que el estilo te eliga</title>
 </head>
 <body>
+    <!--Inicio header-->
     <header>
         <nav>
             <ul>
@@ -24,6 +26,8 @@
             </ul>   
         </nav>
     </header>
+    <!--Fin header-->
+    <!--Inicio section-->
     <section>
         <h1>Nueva colección | Vive el 2022</h1>
         <div>
@@ -31,7 +35,7 @@
         </div>
         <p class="parrafo-section">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere expedita id obcaecati magni ab consectetur ducimus est! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat quibusdam eligendi doloremque, commodi, animi deserunt corporis assumenda, modi nemo explicabo similique. Mollitia beatae atque accusamus error ab ut voluptas tempore.</p>
     </section>
-
+    <!--Inicio footer-->
     <footer>
         <a class="link-footer" href="https://www.facebook.com/" target="_blank">
             <img class="logos-redes" src="images/facebook.png" alt="facebook">
@@ -44,7 +48,7 @@
         </a>
         <p class="parrafo-footer">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
     </footer>
-
+    <!--Fin footer-->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </body>
