--- a/hombre.html
+++ b/hombre.html
@@ -14,6 +14,7 @@
     <title>Avance de temporada | Todo lo que el hombre necesita</title>
 </head>
 <body>
+    <!--Inicio header-->
     <header>
         <nav>
             <ul>
@@ -24,6 +25,9 @@
             </ul>   
         </nav>
     </header>
+    <!--fin header-->
+
+    <!--Inicio imagenes de muestra-->
     <div class="d-flex justify-content-around d-flex flex-wrap">
         <div class="card" style="width: 18rem;">
             <img src="images/casaca.png" class="card-img-top" alt="casaca">
@@ -45,8 +49,9 @@
             </div>
         </div>
     </div>
-    
+    <!--Fin imagenes de muestra-->
 
+    <!--Inicio footer-->
     <footer>
         <a class="link-footer" href="https://www.facebook.com/" target="_blank">
             <img class="logos-redes" src="images/facebook.png" alt="facebook">
@@ -59,7 +64,7 @@
         </a>
         <p class="parrafo-footer">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
     </footer>
-
+    <!--Fin footer-->
 
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
