--- a/nosotros.html
+++ b/nosotros.html
@@ -14,6 +14,7 @@
     <title>Conocenos | Nosotros te ayudamos en lo que necesites</title>
 </head>
 <body>
+    <!--Inicio header-->
     <header>
         <nav>
             <ul>
@@ -24,7 +25,9 @@
             </ul>   
         </nav>
     </header>
+    <!--Fin header-->
 
+    <!--Inicio section nosotros-->
     <section class="seccion-nosotros">
         <h3 class="pregunta">
             ¿Primera pregunta frecuente?
@@ -56,8 +59,9 @@
         </h3>
         <p class="parrafo-nosotros">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam rerum id labore accusantium quae facilis expedita inventore nemo, aspernatur voluptates nobis. Voluptate id alias voluptatem nam? Eius id quo odit?</p>
     </section>
+    <!--Fin seccion nosotros-->
 
-
+    <!--Inicio footer-->
     <footer>
         <a class="link-footer" href="https://www.facebook.com/" target="_blank">
             <img class="logos-redes" src="images/facebook.png" alt="facebook">
@@ -70,7 +74,7 @@
         </a>
         <p class="parrafo-footer">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
     </footer>
-
+    <!--Fin footer-->
 
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
