--- a/mujer.html
+++ b/mujer.html
@@ -13,6 +13,7 @@
     <title>Avance de temporada | Todo lo que la mujer necesita</title>
 </head>
 <body>
+    <!--Inicio header-->
     <header>
         <nav>
             <ul>
@@ -23,6 +24,9 @@
             </ul>   
         </nav>
     </header>
+    <!--Fin header-->
+
+    <!--Inicio seccion mujeres-->
     <section class="imagenes-mujer">
         <div class="d-flex justify-content-around d-flex flex-wrap">
         <div class="card" style="width: 18rem;">
@@ -38,8 +42,9 @@
         </div>
         </div>
     </section>
+    <!--Fin seccion mujeres-->
 
-
+    <!--Inicio footer-->
     <footer>
         <a class="link-footer" href="https://www.facebook.com/" target="_blank">
             <img class="logos-redes" src="images/facebook.png" alt="facebook">
@@ -52,6 +57,7 @@
         </a>
         <p class="parrafo-footer">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
     </footer>
+    <!--Fin footer-->
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
