--- a/hombre.html
+++ b/hombre.html
@@ -28,27 +28,53 @@
     <!--fin header-->
 
     <!--Inicio imagenes de muestra-->
-    <div class="d-flex justify-content-around d-flex flex-wrap">
-        <div class="card" style="width: 18rem;">
-            <img src="images/casaca.png" class="card-img-top" alt="casaca">
-            <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-        
-        </div>
-        <div class="card" style="width: 18rem;">
-            <img src="images/pantalon.png" class="card-img-top" alt="casaca">
-            <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-        </div> 
-        <div class="card" style="width: 18rem;">
-            <img src="images/zapato.png" class="card-img-top" alt="casaca">
-            <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-        </div>
+
+    <section class="container" >
+        <section class="logo-producto">
+            <a href="#polos-hombre">
+                <img class="logo-1" src="images/camiseta.png" alt="">
+            </a>
+            <a href="#sudadera-hombre">
+                <img class="logo-2" src="images/sudadera-con-capucha.png" alt="">
+            </a>
+            <a href="#pantalon-hombre">
+                <img class="logo-3" src="images/pantalones-deportivos.png" alt="">
+            </a>
+        </section>
+    </section>
+
+    <h2>Coleccion Polos</h2>
+    <div id="polos-hombre">
+        <img src="images/hombre/polo1.png" alt="">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo a ipsam nihil mollitia. Veritatis modi, blanditiis quaerat hic in ea accusamus cupiditate adipisci maiores. Sunt assumenda quaerat ea iste optio.</p>
+        <img src="images/hombre/polo2.png" alt="">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo a ipsam nihil mollitia. Veritatis modi, blanditiis quaerat hic in ea accusamus cupiditate adipisci maiores. Sunt assumenda quaerat ea iste optio.</p>
+        <img src="images/hombre/polo3.png" alt="">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo a ipsam nihil mollitia. Veritatis modi, blanditiis quaerat hic in ea accusamus cupiditate adipisci maiores. Sunt assumenda quaerat ea iste optio.</p>
     </div>
+
+    <h2>Coleccion Sudaderas</h2>
+    <div id="sudadera-hombre">
+
+        <img src="images/hombre/sudadera1.png" alt="">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo a ipsam nihil mollitia. Veritatis modi, blanditiis quaerat hic in ea accusamus cupiditate adipisci maiores. Sunt assumenda quaerat ea iste optio.</p>
+        <img src="images/hombre/sudadera2.png" alt="">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo a ipsam nihil mollitia. Veritatis modi, blanditiis quaerat hic in ea accusamus cupiditate adipisci maiores. Sunt assumenda quaerat ea iste optio.</p>
+        <img src="images/hombre/sudadera3.png" alt="">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo a ipsam nihil mollitia. Veritatis modi, blanditiis quaerat hic in ea accusamus cupiditate adipisci maiores. Sunt assumenda quaerat ea iste optio.</p>
+
+    </div>
+
+    <h2>Coleccion Pantalones</h2>
+    <div id="pantalon-hombre">
+        <img src="images/hombre/pantalon1.png" alt="">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo a ipsam nihil mollitia. Veritatis modi, blanditiis quaerat hic in ea accusamus cupiditate adipisci maiores. Sunt assumenda quaerat ea iste optio.</p>
+        <img src="images/hombre/pantalon2.png" alt="">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo a ipsam nihil mollitia. Veritatis modi, blanditiis quaerat hic in ea accusamus cupiditate adipisci maiores. Sunt assumenda quaerat ea iste optio.</p>
+        <img src="images/hombre/pantalon3.png" alt="">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo a ipsam nihil mollitia. Veritatis modi, blanditiis quaerat hic in ea accusamus cupiditate adipisci maiores. Sunt assumenda quaerat ea iste optio.</p>
+    </div>
+
     <!--Fin imagenes de muestra-->
 
     <!--Inicio footer-->
